--- a/styles/login.css
+++ b/styles/login.css
@@ -4,23 +4,25 @@ body{
 
 .navbar{
     background-color: white;
+    /* margin-top: -60px; */
 }
 
 .login{
     width: 400px;
     height: 510px;
     margin: auto;
-    margin-top: 40px;
+    margin-top: 0px;
     
 }
 
 .login-banner > img{
+    margin-top: 20px;
     height: 140px;
     width: 400px;
 }
 
 .login-card{
-    height: 350px;
+    height: 400px;
     background-color: white;
     padding: 5px;
 }
@@ -53,7 +55,6 @@ body{
     padding-left: 5px;
     margin-bottom: 10px;
     margin-top: 20px;
-
 }
 
 input{
@@ -62,7 +63,7 @@ input{
     line-height: 16px;
 }
 
-form + p{
+input + p{
     margin-left: 24px;
     line-height: 18px;
     font-size: 14px;
@@ -89,7 +90,7 @@ form + p{
 }
 
 .terms , .privacy{
-    color: tomato;
+    color: #ff3f6c;
     font-weight: bold;
     margin-top: 20px;
 
@@ -117,3 +118,17 @@ form + p{
     font-size: 14px;
     margin-top: 20px;
 }
+
+#newacc{
+    border: 1px solid #ff3f6c;
+    width: 340px;
+    height: 40px;
+    font-weight: bold;
+    margin-left: 24px;
+    margin-top: 10px;
+    text-align: center;
+    color: #ff3f6c;
+    background-color: white;
+    cursor: pointer;
+}
+
