--- a/styles/men.css
+++ b/styles/men.css
@@ -1,4 +1,4 @@
-.deals-top-brands-mens > div {
+.deals-top-brands-mens > div > a{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, auto);
@@ -6,7 +6,7 @@
     justify-content: space-evenly;
   }
   
-  .deals-top-brands-mens > div > img {
+  .deals-top-brands-mens > div > a > img {
     width: 220px;
     height: 300px;
   }
@@ -64,4 +64,8 @@
   .trending-men > div > img{
     width: 188px;
     height: 240px;
+  }
+
+  .banners  {
+    width: 100%;
   }
