--- a/styles/product.css
+++ b/styles/product.css
@@ -41,6 +41,10 @@
   color: red;
 }
 
+.product-card {
+  margin-bottom: 20px;
+}
+
 .product-card > img {
   width: 210px;
   height: 280px;
@@ -98,4 +102,15 @@ option {
 
 strong{
     color: black;
+}
+
+.btn{
+  width: 50%;
+  padding: 7px;
+  background-color: #fd295a;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
 }
