--- a/styles/men.css
+++ b/styles/men.css
@@ -1,4 +1,5 @@
 .deals-top-brands-mens > div > a{
+  margin-top: 80px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, auto);
