--- a/styles/product.css
+++ b/styles/product.css
@@ -1,7 +1,7 @@
 .big-flex {
   display: flex;
   margin: auto;
-  margin-top: 10px;
+  /* margin-top: 80px; */
   justify-content: space-around;
 }
 
@@ -87,7 +87,7 @@ option {
 }
 
 .path{
-    margin-top: 20px;
+  margin-top: 80px;
     margin-left: 20px;
     font-size: 14px;
     color: grey;
